--- a/assets/custom.css
+++ b/assets/custom.css
@@ -292,6 +292,7 @@ figcaption {
 .wide-quote blockquote {
     width: 100% !important;
     margin: 0;
+    padding: 0;
 }
 
 .wide-quote blockquote p {
@@ -302,4 +303,14 @@ figcaption {
 }
 .column-align-left{
     text-align:left;
+}
+.pre-width-100 pre {
+    width: 100% !important;
+    margin: 0 !important;
+}
+.pre-width-100 > div {
+    margin: 0 !important;
+}
+.column-vertical-align {
+    vertical-align: top;
 }
