--- a/assets/custom.css
+++ b/assets/custom.css
@@ -314,6 +314,9 @@ figcaption {
 .pre-width-100 > div {
     margin: 0 !important;
 }
+.pre-height-100 pre {
+    height: 100% !important;
+}
 .column-vertical-align {
     vertical-align: top;
 }
