--- a/assets/custom.css
+++ b/assets/custom.css
@@ -317,6 +317,16 @@ figcaption {
 .pre-height-100 pre {
     height: 100% !important;
 }
+/*.pre-vmargin-0 pre, .pre-vmargin-0 > div {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}*/
+.pre-450 pre {
+    height: 450px;
+}
+.pre-475 pre {
+    height: 475px;
+}
 .column-vertical-align {
     vertical-align: top;
 }
